[tool.poetry]
name = "dazzle-dash"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo-andriamaromanana>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
