[tool.poetry]
name = "dazzle-dash"
version = "0.1.0"
description = ""
authors = ["yayassad <alexandre.assad@laplateforme.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
dash = "^2.14.2"
importnb = "^2023.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
