[tool.poetry]
name = "dazzle-dash"
version = "0.1.0"
description = ""
authors = ["yayassad <alexandre.assad@laplateforme.io>"]
readme = "README.md"
packages = [
    { include = "dazzle_dash", from="."}
]

[tool.poetry.scripts]
dazzle-dash = "dazzle_dash:main"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
dash = "^2.14.2"
importnb = "^2023.11.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

